--- a/index.html
+++ b/index.html
@@ -5,19 +5,14 @@
     	<meta name="description" content="This is where your description goes">
     	<meta name="keywords" content="one, two, three">
 
-		<title>Sleep Debt Calculator</title>
+		<title>Whale Talk</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<section class="container">
-			<h1>Test</h1>
-			<h2>Let's Calculate your sleep debt!</h2>
-			<h3>Copy the Tesla website.</h3>
-		</section>
-		
+	
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
